update text content

--- a/collections/_posts/2024-11-14-abz2025-case-study.markdown
+++ b/collections/_posts/2024-11-14-abz2025-case-study.markdown
@@ -4,6 +4,6 @@ date:   2018-11-28 15:01:35 +0300
 description: >-
   A short description here
 image:  '/images/post-2.jpg'
-tags:   [abz]
+tags:   [abz, case-study]
 ---
 A full description here
