--- a/collections/_posts/2024-11-14-abz2025-case-study.markdown
+++ b/collections/_posts/2024-11-14-abz2025-case-study.markdown
@@ -2,7 +2,7 @@
 title:  Enhancing Decision-making Safety in AD Through Online Model Checking
 date:   2018-11-28 15:01:35 +0300
 description: >-
-  A short description here
+  We propose leveraging online model checking to develop a safety shield for autonomous driving. 
 image:  '/images/safety-shield.jpg'
 tags:   [safety-shield, model-checking, RL]
 ---
